--- a/public/fa/facategories/index.html
+++ b/public/fa/facategories/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="fa" dir="rtl">
 
 <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Categories | PaperMod</title>
+<title>FAcategories | PaperMod RTL</title>
 <meta name="keywords" content="">
 <meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name="author" content="Theme PaperMod">
-<link rel="canonical" href="/categories/">
+<link rel="canonical" href="/fa/facategories/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.0c4fd3725171366f335155acde6fb3c7b7042cd2fd075bebf5023d9b28a701b2.css" integrity="sha256-DE/TclFxNm8zUVWs3m&#43;zx7cELNL9B1vr9QI9myinAbI=" rel="preload stylesheet" as="style">
 <link rel="icon" href="/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -18,8 +18,8 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="/categories/index.xml">
-<link rel="alternate" hreflang="en" href="/categories/">
+<link rel="alternate" type="application/rss+xml" href="/fa/facategories/index.xml">
+<link rel="alternate" hreflang="fa" href="/fa/facategories/">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,15 +56,15 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Categories" />
+</noscript><meta property="og:title" content="FAcategories" />
 <meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/categories/" /><meta property="og:image" content="/papermod-cover.png"/>
+<meta property="og:url" content="/fa/facategories/" /><meta property="og:image" content="/papermod-cover.png"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/papermod-cover.png"/>
 
-<meta name="twitter:title" content="Categories"/>
+<meta name="twitter:title" content="FAcategories"/>
 <meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"/>
 
 </head>
@@ -84,7 +84,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="/" accesskey="h" title="PaperMod (Alt + H)">PaperMod</a>
+            <a href="/fa/" accesskey="h" title="PaperMod RTL (Alt + H)">PaperMod RTL</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -108,52 +108,20 @@
                 </button>
                 <ul class="lang-switch"><li>|</li>
                     <li>
-                        <a href="/fr/" title="French"
-                            aria-label=":fr:">🇫🇷</a>
+                        <a href="/" title="English"
+                            aria-label="English">English</a>
                     </li>
                     <li>
-                        <a href="/fa/" title="Fa"
-                            aria-label="Fa">Fa</a>
+                        <a href="/fr/" title="French"
+                            aria-label=":fr:">🇫🇷</a>
                     </li>
                 </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="/archives" title="Archive">
-                    <span>Archive</span>
-                </a>
-            </li>
-            <li>
-                <a href="/search/" title="Search">
-                    <span>Search</span>
-                </a>
-            </li>
-            <li>
-                <a href="/tags/" title="Tags">
-                    <span>Tags</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://discord.gg/ahpmTvhVmp" title="Discord">
-                    <span>Discord</span>&nbsp;
-                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
-                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
-                        <path d="M15 3h6v6"></path>
-                        <path d="M10 14L21 3"></path>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/adityatelange/hugo-PaperMod/wiki/" title="WiKi">
-                    <span>WiKi</span>&nbsp;
-                    <svg fill="none" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round"
-                        stroke-linejoin="round" stroke-width="2.5" viewBox="0 0 24 24" height="12" width="12">
-                        <path d="M18 13v6a2 2 0 01-2 2H5a2 2 0 01-2-2V8a2 2 0 012-2h6"></path>
-                        <path d="M15 3h6v6"></path>
-                        <path d="M10 14L21 3"></path>
-                    </svg>
+                <a href="/fa/fatags" title="FATags">
+                    <span>FATags</span>
                 </a>
             </li>
         </ul>
@@ -161,7 +129,7 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Categories</h1>
+    <h1>FAcategories</h1>
 </header>
 
 <ul class="terms-tags">
@@ -169,7 +137,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="/">PaperMod</a></span>
+    <span>&copy; 2023 <a href="/fa/">PaperMod RTL</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
