--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>PaperMod</title>
+<title>Yan</title>
 
 <meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name="author" content="Theme PaperMod">
@@ -60,7 +60,7 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="PaperMod" />
+</noscript><meta property="og:title" content="Yan" />
 <meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/" /><meta property="og:image" content="/papermod-cover.png"/>
@@ -68,14 +68,14 @@
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="/papermod-cover.png"/>
 
-<meta name="twitter:title" content="PaperMod"/>
+<meta name="twitter:title" content="Yan"/>
 <meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "PaperMod",
+  "name": "Yan",
   "url": "/",
   "description": "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod",
   "thumbnailUrl": "/favicon.ico",
@@ -101,7 +101,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="/" accesskey="h" title="PaperMod (Alt + H)">PaperMod</a>
+            <a href="/" accesskey="h" title="Yan (Alt + H)">Yan</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -137,6 +137,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="/gallery" title="Gallery">
+                    <span>Gallery</span>
+                </a>
+            </li>
+            <li>
                 <a href="/archives" title="Archive">
                     <span>Archive</span>
                 </a>
@@ -144,11 +149,6 @@
             <li>
                 <a href="/search/" title="Search">
                     <span>Search</span>
-                </a>
-            </li>
-            <li>
-                <a href="/tags/" title="Tags">
-                    <span>Tags</span>
                 </a>
             </li>
             <li>
@@ -237,7 +237,7 @@ A Little More About Me I was born and raised in China, and I’ve always been in
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="/">PaperMod</a></span>
+    <span>&copy; 2023 <a href="/">Yan</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
