--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | PaperMod</title>
+<title>404 Page not found | Yan</title>
 <meta name="keywords" content="">
 <meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
 <meta name="author" content="Theme PaperMod">
@@ -82,7 +82,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="/" accesskey="h" title="PaperMod (Alt + H)">PaperMod</a>
+            <a href="/" accesskey="h" title="Yan (Alt + H)">Yan</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -118,6 +118,11 @@
         </div>
         <ul id="menu">
             <li>
+                <a href="/gallery" title="Gallery">
+                    <span>Gallery</span>
+                </a>
+            </li>
+            <li>
                 <a href="/archives" title="Archive">
                     <span>Archive</span>
                 </a>
@@ -125,11 +130,6 @@
             <li>
                 <a href="/search/" title="Search">
                     <span>Search</span>
-                </a>
-            </li>
-            <li>
-                <a href="/tags/" title="Tags">
-                    <span>Tags</span>
                 </a>
             </li>
             <li>
@@ -162,7 +162,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="/">PaperMod</a></span>
+    <span>&copy; 2023 <a href="/">Yan</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
